--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "@angular/router": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "sockjs-client": "^1.6.0",
-    "stompjs": "^2.3.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.2",
